// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`find keywords \\int_{3}^{5} x^2 dx 1`] = `
Array [
  "3^5*x^2*dx",
  "x^2",
]
`;

exports[`find keywords \\left(x-1\\right)^2=\\left(4\\sqrt{x-4}\\right)^2 1`] = `
Array [
  "1^2",
  "4sqrtx",
  "4^2",
]
`;

exports[`find keywords 4x^2+3x+4=0 1`] = `
Array [
  "4*x^2",
  "3*x",
  "x^2",
]
`;

exports[`find keywords 4x^2+5 1`] = `
Array [
  "4*x^2",
  "x^2",
]
`;

exports[`find keywords 5x^2=7x+6 1`] = `
Array [
  "5*x^2",
  "7*x",
  "x^2",
]
`;

exports[`find keywords 20x^2+2x^2+3=10+4+x+8x 1`] = `
Array [
  "20*x^2",
  "2*x^2",
  "8*x",
  "x^2",
]
`;

exports[`find keywords x^{\\sqrt{\\log_33}}=\\left(\\sqrt{3}\\right)^{\\log_3x} 1`] = `
Array [
  "x^sqrtlog",
  "sqrt3^log",
  "3*x",
]
`;

exports[`find keywords x^2+2x^2+3=0 1`] = `
Array [
  "x^2",
  "2*x^2",
]
`;

exports[`find keywords x^5 1`] = `
Array [
  "x^5",
]
`;

exports[`find keywords y=(x+\\frac{1}{x})(x-\\frac{1}{x}+1) 1`] = `
Array [
  "y",
  "1/xx",
  "1/x",
]
`;

exports[`find keywords y=\\cos\\left(x\\right) 1`] = `
Array [
  "y",
  "cosx",
]
`;

exports[`find keywords y=5x^2+5 1`] = `
Array [
  "y",
  "5*x^2",
  "x^2",
]
`;

exports[`find keywords y^2+x^5+2=3x+3y 1`] = `
Array [
  "y^2",
  "x^5",
  "3*x",
  "3*y",
  "y",
]
`;
